# MyFinance

./: .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CHATBOT_SETUP.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  LICENSE  MODELOS_AI.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_UI_ENHANCEMENTS.md  SECURITY.md  docker-compose.yml  env.example  env.template  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci.yml
app/: __init__.py  app.py  backend.py  config.py  layout.py
app/componentes/: responsive_layout.py  sidebar.py  ui_components.py
app/paginas/: analytics.py  assistente_pagador.py  chat.py  configuracoes.py  dashboard.py  dashboard_enhanced.py  metas_financeiras.py  orcamento.py  previsao.py  processamento.py  relatorios.py
docs/: DEVELOPMENT.md
tests/: test_backend.py
